# Raft-Lang

./: .gitignore  CMakeLists.txt  README.md  test.rft
Test/: main.rft  math.rft  my_file.rft
src/: main.cpp
src/AST/: AST.cpp  AST.h
src/CodeGen/: IRCodegenVisitor.cpp  IRCodegenVisitor.h
src/Interpreter/: Environment.h  Interpreter.cpp  Interpreter.h
src/Lexer/: lexer.cpp  lexer.h
src/Parser/: parser.cpp  parser.h
src/Resolver/: Module.h  Natives.cpp  Resolver.cpp  Resolver.h
src/TypeChecker/: TypeChecker.cpp  TypeChecker.h
src/Util/: token.cpp  token.h
